# my_python_architecture

./: .openapi-generator-ignore  Dockerfile  README.md  docker-compose.yaml  init.sql  openapi.yaml  pyproject.toml
.openapi-generator/: FILES
openapi_server/: logger.py  main.py
openapi_server/apis/: task_api.py  task_api_base.py
openapi_server/business/: const.py  create_task_usecase.py
openapi_server/business/adapters/: todo_repository_postgres.py
openapi_server/business/ports/: todo_repository.py
openapi_server/business/usecase/: create_task_usecase.py  list_tasks_usecase.py
openapi_server/impl/: task_api_controller.py
openapi_server/models/: task.py  task_create.py  task_update.py
tests/: test_task_api.py
