[project]
name = "my-python-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.12",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 100
exclude = [
    "openapi_server/apis/__init__.py",
    "openapi_server/apis/task_api.py",
    "openapi_server/apis/task_api_base.py",
    "openapi_server/impl/__init__.py",
    "openapi_server/main.py",
    "openapi_server/models/__init__.py",
    "openapi_server/models/extra_models.py",
    "openapi_server/models/task.py",
    "openapi_server/models/task_create.py",
    "openapi_server/models/task_update.py",
    "openapi_server/security_api.py",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.lint.pylint]
max-args = 6
